hard-gists/5875326/run.log
=== Docker Run Log for 5875326 ===
Started at: Mi 29. Okt 16:08:43 CET 2025

[2025-10-29 16:08:43] START: Running container for 5875326
[2025-10-29 16:08:44] SUCCESS: Container b5b2aed497c27c6138bb63bfce701096940871c625508fb37462db65bd9cd12a started for 5875326
=== Container logs for 5875326 ===
  File "/snippet.py", line 89
    except pycurl.error, e:
           ^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5875326 ===
[2025-10-29 16:08:46] INFO: Container b5b2aed497c27c6138bb63bfce701096940871c625508fb37462db65bd9cd12a has stopped
